--- a/EventPage.html
+++ b/EventPage.html
@@ -16,7 +16,7 @@
     </header>
     <div class="menu">
         <nav class="nav flex-column flex-sm-column">
-            <a class="badge badge-pill badge-danger" href="HomePageStarWars.html">Home</a>
+            <a class="badge badge-pill badge-danger" href="index.html">Home</a>
             <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
             <a class="badge badge-pill badge-warning" href="SecondTrilogyStarWars.html">Second Trilogy</a>
             <a class="badge badge-pill badge-warning" href="ThirdTrilogyStarWars.html">Third Trilogy</a>
