--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="index.css">
+    <link rel="stylesheet" href="FilesCss/index.css">
 
     <title>Star Wars Blog</title>
 </head>
@@ -18,87 +18,111 @@
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                 <div class="carousel-inner">
                     <div class="carousel-item active">
-                        <img src="https://via.placeholder.com/1100x150" class="d-block w-100" alt="...">
+                        <img id="img1" src="ImageSW/Star_Wars_header_v4.jpg" class="d-block w-100" alt="MasterYoda">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>Star Wars</h1>
+
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="https://via.placeholder.com/1100x150" class="d-block w-100" alt="...">
+                        <img id="img2" src="ImageSW/best-star-wars-header.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>Star Wars</h1>
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img src="https://via.placeholder.com/1100x150" class="d-block w-100" alt="...">
+                        <img id="img3" src="ImageSW/VaporatorsHeader-1.jpg" class="d-block w-100" alt="...">
                         <div class="carousel-caption d-none d-md-block">
-                            <h1>Star Wars</h1>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </header>
+    <audio controls autoplay src="AudioSW/Imperial.mp3"></audio>
     <div class="menu">
-        <nav class="nav nav-pills flex-column flex-sm-column">
-            <a class="flex-sm-fill text-sm-center nav-link active" href="#">Active</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">Longer nav link</a>
-            <a class="flex-sm-fill text-sm-center nav-link" href="#">Link</a>
-            <a class="flex-sm-fill text-sm-center nav-link disabled" href="#" tabindex="-1"
-                aria-disabled="true">Disabled</a>
+        <nav class="nav flex-column flex-sm-column">
+            <a class="badge badge-pill badge-danger" href="index.html">Home</a>
+            <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
+            <a class="badge badge-pill badge-warning" href="SecondTrilogyStarWars.html">Second Trilogy</a>
+            <a class="badge badge-pill badge-warning" href="ThirdTrilogyStarWars.html">Third Trilogy</a>
+            <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
         </nav>
     </div>
-    <section>
-        <div class="card" style="width: 18rem;">
+    <section class="container">
+        <div class="card1" style="width: 32rem;">
 
-            <img src="https://via.placeholder.com/250x600" class="d-block w-100" alt="...">
+            <img id= "BigCard" src="ImageSW/VaderGoodP1.jpg" class="d-block w-100" alt="Darth Vader">
             <div class="card-body">
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
+                <h5 class="card-title">Events</h5>
+                <p class="card-text">Discover all the Star Wars events incoming</p>
             </div>
         </div>
-    </section>
-    <section>
-
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Card image cap">
-            <div class="card-body">
-                <a href="https/www.google.com"></a>
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of
-                    the
-                    card's content.</p>
-
-            </div>
-        </div>
-
-        <div class="card" style="width: 18rem;">
-            <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Card image cap">
-            <div class="card-body">
-                <a href="https/www.google.com"></a>
-                <h5 class="card-title">Card title</h5>
-                <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                    card's content.</p>
-
-            </div>
-            <div class="card" style="width: 18rem;">
-                <img class="card-img-top" src="https://via.placeholder.com/300x150" alt="Card image cap">
+        <div class="littlecards">
+            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+                <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap">
                 <div class="card-body">
-                    <a href="https/www.google.com"></a>
                     <h5 class="card-title">Card title</h5>
                     <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
                         card's content.</p>
-
                 </div>
-
             </div>
+            <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
+                        <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap">
+                    </div>
+                </div>
+            </div>
+
+            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+                <img class="card-img-top" src="ImageSW/Sidiousp1.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+            <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
+                    </div>
+                </div>
+            </div>
+            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+                <img id="mugs" class="card-img-top" src="ImageSW/mug-cardp1.jpg.jpg" alt="Card image cap">
+                <div class="card-body">
+                    <h5 class="card-title">Card title</h5>
+                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
+                        card's content.</p>
+                </div>
+            </div>
+            <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+                aria-labelledby="myLargeModalLabel" aria-hidden="true">
+                <div class="modal-dialog modal-lg">
+                    <div class="modal-content">
+                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </section>
+
     <footer>
-        <p class="Pfooter"><a href="https://twitter.com/?lang=fr" target="_blank">Twitter</a></p>
-        <p class="Pfooter"><a href="https://Facebook.com/" target="_blank">Facebook</a></p>
-        <p class="Pfooter"><a href="https://Instagram.com/" target="_blank">Instagram</a></p>
-        <p>A Star Wars Blog by WCS Team</p>
+        <a href="https://facebook.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/facebook.png"
+                alt="facebook"></a>
+        <a href="https://twitter.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/twitter.png"
+                alt="twitter"></a>
+        <a href="https://instagram.com" target="_blank"><img
+                src="https://img.icons8.com/color/48/000000/instagram-new.png" alt="instagram"></a>
+        <a href="https://youtube.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/youtube-play.png"
+                alt="youtube"></a>
+        <p><span>A Star Wars Blog by Nathalie, Fabien & Enzo</span></p>
     </footer>
+    
+
 
 
 
@@ -115,8 +139,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-
 </body>
-
 
 </html>
