--- a/index.html
+++ b/index.html
@@ -37,7 +37,8 @@
             </div>
         </div>
     </header>
-    <audio controls autoplay src="AudioSW/Imperial.mp3"></audio>
+    <audio  autoplay  controls src="AudioSW/Imperial.mp3">
+      </audio>
     <div class="menu">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
