added second trilogie movies poster

--- a/SecondTrilogyStarWars.html
+++ b/SecondTrilogyStarWars.html
@@ -25,7 +25,7 @@
     </div>
     <section class="superclass">
             <div class="firstandthirdmovie" style="width: 25rem;" >
-                <img src="ImageSW/ANewHope.jpg" class="d-block w-100" alt="Episode I Poster">
+                <img src="ImageSW/secf1.jpg" class="d-block w-100" alt="Episode I Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode I: The Phantom Menace (1999)</h2>
                     <p style="text-align: justify" class="card-text">Episode I begins 32 years before the events of episode IV. Two Jedi, Qui-Gon Jinn and his apprentice Obi-Wan Kenobi are in charge of investigating a political crisis affecting the peaceful planet of Naboo. This one is invaded and its queen, Padmé Amidala, flees the planet with the Jedi to plead its cause before the Senate, on Coruscant. On the way, the group stops on Tatooine to repair his ship and meets a young slave, Anakin Skywalker, who has strong affinities with the Force. He finally joins the group. The heroes soon realize that the Senate will do nothing to help them and return to Naboo to lead the liberation of the planet, while Senator Palpatine takes advantage of the crisis to gain power. On Naboo, a mysterious Sith, Dark Maul, kills Qui-Gon, before being killed by Obi-Wan. The planet is finally released and Anakin begins a Jedi formation, while the masters Yoda and Mace Windu wonder about a possible return of the Sith.</p>
@@ -33,7 +33,7 @@
             </div>
     
             <div class="secondmovie" style="width: 25rem;">
-                <img src="ImageSW/Empire_strikes_back.jpg" class="d-block w-100" alt="Episode V Poster">
+                <img src="ImageSW/secf2.jpg" class="d-block w-100" alt="Episode V Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode II: Attack of the clones (2002)</h2>
                     <p style="text-align: justify" class="card-text">
@@ -43,7 +43,7 @@
             </div>
             <div class="firstandthirdmovie" style="width: 25rem;">
     
-                <img id="poster3" src="ImageSW/ReturnOfTheJedi.jpg" class="d-block w-100" alt="Episode VI Poster">
+                <img id="poster3" src="ImageSW/secf3.jpg" class="d-block w-100" alt="Episode VI Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode III: Revenge of the sith (2005)</h2>
                     <p style="text-align: justify" class="card-text">Episode III begins when the Jedi Skywalker and Kenobi save the chancellor captured by the separatists during the war. Gradually, the influence of the latter becomes stronger and stronger. At the same time, the Jedi increasingly suspect the presence of a Sith Lord in the higher spheres of power. While knights are sent to battle across the galaxy with their battalions of clones, Anakin discovers that the Chancellor is the Sith Lord in question. However, the latter explains to him how to save Padmé from a certain death. Anakin then prevents the Jedi from killing the Sith by interposing in his duel against Mace Windu. Palpatine takes the opportunity to eliminate the Jedi Master and then orders 66: all Knights are eliminated by the clones. Some, however, escape the massacre, Yoda and Obi-Wan in the lead. The first party faces Palpatine, newly self-appointed Emperor and fails. At the same time, Obi-Wan confronts Anakin, who became Lord Vader and leaves him for dead, horribly burned. While Palpatine has Vader operated, now locked in an imposing black armor, Padme gives birth to two children, Luke and Leia, before dying. The first is entrusted to his uncle and aunt on Tatooine, while the second is raised by the Alderaan royal family.
