--- a/FirstTrilogyStarWars.html
+++ b/FirstTrilogyStarWars.html
@@ -24,6 +24,7 @@
         </nav>
     </div>
     <section class="superclass">
+            <section class = "movies">
         <div class="firstandthirdmovie" style="width: 25rem;" >
             <img src="ImageSW/ANewHope.jpg" class="d-block w-100" alt="Episode IV Poster">
             <div class="card-body">
@@ -44,6 +45,8 @@
                     losses including the death of Kenobia.</p>
             </div>
         </div>
+    </section>
+    <section class = "movies2">
 
         <div class="secondmovie" style="width: 25rem;">
             <img src="ImageSW/Empire_strikes_back.jpg" class="d-block w-100" alt="Episode V Poster">
@@ -61,6 +64,8 @@
                 </p>
             </div>
         </div>
+    </section>
+    <section class = "movies">
         <div class="firstandthirdmovie" style="width: 25rem;">
 
             <img id="poster3" src="ImageSW/ReturnOfTheJedi.jpg" class="d-block w-100" alt="Episode VI Poster">
@@ -82,6 +87,7 @@
             </div>
         </div>
     </section>
+</section>
     <footer>
         <a href="https://facebook.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/facebook.png"
                 alt="facebook"></a>
