--- a/SecondTrilogyStarWars.html
+++ b/SecondTrilogyStarWars.html
@@ -24,6 +24,7 @@
         </nav>
     </div>
     <section class="superclass">
+            <section class = "movies">
             <div class="firstandthirdmovie" style="width: 25rem;" >
                 <img src="ImageSW/secf1.jpg" class="d-block w-100" alt="Episode I Poster">
                 <div class="card-body">
@@ -31,6 +32,8 @@
                     <p style="text-align: justify" class="card-text">Episode I begins 32 years before the events of episode IV. Two Jedi, Qui-Gon Jinn and his apprentice Obi-Wan Kenobi are in charge of investigating a political crisis affecting the peaceful planet of Naboo. This one is invaded and its queen, Padmé Amidala, flees the planet with the Jedi to plead its cause before the Senate, on Coruscant. On the way, the group stops on Tatooine to repair his ship and meets a young slave, Anakin Skywalker, who has strong affinities with the Force. He finally joins the group. The heroes soon realize that the Senate will do nothing to help them and return to Naboo to lead the liberation of the planet, while Senator Palpatine takes advantage of the crisis to gain power. On Naboo, a mysterious Sith, Dark Maul, kills Qui-Gon, before being killed by Obi-Wan. The planet is finally released and Anakin begins a Jedi formation, while the masters Yoda and Mace Windu wonder about a possible return of the Sith.</p>
                 </div>
             </div>
+        </section>
+        <section class = "movies2">
     
             <div class="secondmovie" style="width: 25rem;">
                 <img src="ImageSW/secf2.jpg" class="d-block w-100" alt="Episode V Poster">
@@ -41,6 +44,8 @@
                     </p>
                 </div>
             </div>
+        </section>
+        <section class = "movies">
             <div class="firstandthirdmovie" style="width: 25rem;">
     
                 <img id="poster3" src="ImageSW/secf3.jpg" class="d-block w-100" alt="Episode VI Poster">
@@ -51,6 +56,7 @@
                 </div>
             </div>
         </section>
+    </section>
     <footer>
             <a href="https://facebook.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/facebook.png"
                     alt="facebook"></a>
