--- a/ThirdTrilogyStarWars.html
+++ b/ThirdTrilogyStarWars.html
@@ -24,8 +24,9 @@
         </nav>
     </div>
     <section class="superclass">
+        <section class = "movies">
         <div class="firstandthirdmovie" style="width: 25rem;">
-            <img src="ImageSW/ANewHope.jpg" class="d-block w-100" alt="Episode IV Poster">
+            <img src="ImageSW/thif1.jpeg" class="d-block w-100" alt="Episode IV Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VI: The Force Awakens (2015)</h2>
                 <p style="text-align: justify" class="card-text">The first part of the trilogy, Star Wars, episode VII:
@@ -44,9 +45,10 @@
                     after Revenge of the Sith. The other films of the saga received a ranking "All Public" 53.</p>
             </div>
         </div>
-
+    </section>
+    <section class = "movies2">
         <div class="secondmovie" style="width: 25rem;">
-            <img src="ImageSW/Empire_strikes_back.jpg" class="d-block w-100" alt="Episode V Poster">
+            <img src="ImageSW/thif2.jpg" class="d-block w-100" alt="Episode V Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VIII: The Last Jedis (2017)</h2>
                 <p style="text-align: justify" class="card-text">On June 20, 2014, Rian Johnson was chosen to write and
@@ -74,9 +76,11 @@
                 </p>
             </div>
         </div>
+        </section>
+        <section class = "movies">
         <div class="firstandthirdmovie" style="width: 25rem;">
 
-            <img id="poster3" src="ImageSW/ReturnOfTheJedi.jpg" class="d-block w-100" alt="Episode VI Poster">
+            <img id="poster3" src="ImageSW/thif3.jpeg" class="d-block w-100" alt="Episode VI Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VIII (2019)</h2>
                 <p style="text-align: justify" class="card-text">On August 2015, Colin Trevorrow was announced as
@@ -89,6 +93,7 @@
                 </p>
             </div>
         </div>
+    </section>
     </section>
     <footer>
         <a href="https://facebook.com" target="_blank"><img src="https://img.icons8.com/color/48/000000/facebook.png"
