--- a/EventPage.html
+++ b/EventPage.html
@@ -26,7 +26,7 @@
         <section class = "carouselevents">
             <section class="carouselindiv">
             <div class="bd-example">
-                    <h3>Convention</h3>
+                    <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Convention</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -51,7 +51,7 @@
         </section>
         <section class="carouselindiv">
             <div class="bd-example">
-                    <h3>Disney</h3>
+                    <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Disney</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
@@ -62,7 +62,7 @@
                         <div class="carousel-item">
                             <img src="ImageSW/disney2.jpg" class="d-block w-100" alt="...">
                             <div class="carousel-caption d-none d-md-block">
-                                <h1>Star Wars</h1>
+                                <h1></h1>
                             </div>
                         </div>
                         <div class="carousel-item">
@@ -77,7 +77,7 @@
         </section>
             <section class="carouselindiv">
             <div class="bd-example">
-                    <h3>Next Movies</h3>
+                    <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Next Movies</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
