--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
             </div>
         </div>
     </header>
-    <audio  autoplay  controls src="AudioSW/Imperial.mp3">
-      </audio>
+    <audio autoplay controls src="AudioSW/Imperial.mp3">
+    </audio>
     <div class="menu">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
@@ -51,63 +51,86 @@
     <section class="container">
         <div class="card1" style="width: 32rem;">
 
-            <img id= "BigCard" src="ImageSW/VaderGoodP1.jpg" class="d-block w-100" alt="Darth Vader">
+            <img id="BigCard" src="ImageSW/VaderGoodP1.jpg" class="d-block w-100" alt="Darth Vader">
             <div class="card-body">
                 <h5 class="card-title">Events</h5>
-                <p class="card-text">Discover all the Star Wars events incoming</p>
+                <p class="card-text"> <a href="./EventPage.html" target="_blank">Discover all the Star Wars events incoming</a></p>
             </div>
         </div>
         <div class="littlecards">
             <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
                 <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <h5 class="card-title">We are the Nice guys</h5>
+                    <p class="card-text"> Follow me !</p>
                 </div>
             </div>
             <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
                 aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
-                        <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap">
+                        <section class="fontpcard"> 
+                        <p> <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap"> <br>For over a
+                            thousand generations, the Jedi Knights were the guardians of peace and justice in the Old
+                            Republic"
+                            -Obi-Wan Kenobi.
+                            A Jedi was a Force-sensitive individual, most often a member of the Jedi Order, who served
+                            and studied the Bright Side of the Force.
+
+                            The weapon of the Jedi was the lightsaber, a sword whose blade was made of pure energy. The
+                            Jedi fought for peace and justice in the Galactic Republic, most often against the Sith,
+                            mortal enemies who studied the Dark Side.
+
+                            The origins of the Jedi were very old and dated back more than a thousand generations. When
+                            the Clone Wars broke out, the Jedi Order had nearly 10,000 Jedi in its ranks. At the end of
+                            the conflict, however, they were decimated by the Sith during the execution of Order 66. The
+                            few survivors were hunted down and eliminated by the Inquisitorius. At the end of the
+                            Galactic Civil War, the only known living Jedi was Luke Skywalker.
+
+                            Skywalker embarked on the reconstruction of the order in the years following the end of the
+                            Galactic Civil War. However, his nephew and apprentice Ben Solo, who later called himself
+                            Kylo Ren, massacred all his members. Skywalker was once again the last Jedi of the galaxy.
+                            Envoyer des commentaires
+                            Historique
+                            Enregistré
+                            Communaut</p>
+                        </section>
                     </div>
                 </div>
             </div>
 
-            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+            <div class="card" data-target="#jesp2" data-toggle="modal" style="width: 22rem" ;>
                 <img class="card-img-top" src="ImageSW/Sidiousp1.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <h5 class="card-title">We are the Bad guys !!!</h5>
+                    <p class="card-text"> Follow me !</p>
                 </div>
             </div>
-            <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
+            <div id="jesp2" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
                 aria-labelledby="myLargeModalLabel" aria-hidden="true">
                 <div class="modal-dialog modal-lg">
                     <div class="modal-content">
-                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
+                        <section class="fontpcard"> 
+                        <p> <img class="card-img-top" src="ImageSW/Sidiousp1.jpg" alt="Card image cap">
+                            The Sith, also known as the Sith Order, was an old order of Force fighters dedicated to the
+                            dark side of the Force. Emerging as a divergent faction of the Jedi order, the Sith became
+                            the mortal enemies of the Jedi and fought them in many wars. Driven by emotions such as
+                            hatred, anger and greed, the Sith were misleading and obsessed with gaining power, no matter
+                            the price.
+                        </p>
+                        </section>
                     </div>
                 </div>
             </div>
-            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+            <div class="card" data-target="#fi" data-toggle="modal" style="width: 22rem" ;>
                 <img id="mugs" class="card-img-top" src="ImageSW/mug-cardp1.jpg.jpg" alt="Card image cap">
                 <div class="card-body">
-                    <h5 class="card-title">Card title</h5>
-                    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the
-                        card's content.</p>
+                    <h5 class="card-title">Official shop</h5>
+                    <p class="card-text"><a href="https://www.shopdisney.fr/star-wars" target="_blank">It is not necessary to go to a distant galaxy</a></p>
                 </div>
             </div>
-            <div id="jesp" class="modal fade bd-example-modal-lg" tabindex="-1" role="dialog"
-                aria-labelledby="myLargeModalLabel" aria-hidden="true">
-                <div class="modal-dialog modal-lg">
-                    <div class="modal-content">
-                        <p> "C'est ça q'uon veut dans ce putain de pop up !!!!!"</p>
-                    </div>
-                </div>
-            </div>
+           
+
         </div>
     </section>
 
@@ -122,7 +145,7 @@
                 alt="youtube"></a>
         <p><span>A Star Wars Blog by Nathalie, Fabien & Enzo</span></p>
     </footer>
-    
+
 
 
 
