--- a/FirstTrilogyStarWars.html
+++ b/FirstTrilogyStarWars.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+    <div class="container-fluid">
     <header>
         <h1>First Trilogy</h1>
     </header>
-    <div class="menu">
+    <div class="menu col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
             <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
@@ -23,9 +24,9 @@
             <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
         </nav>
     </div>
-    <section class="superclass">
-            <section class = "movies">
-        <div class="firstandthirdmovie" style="width: 25rem;" >
+    <section class="superclass d-flex row">
+            <section class = "movies1 offset-xl-0 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+        <div class="firstandthirdmovie";>
             <img src="ImageSW/ANewHope.jpg" class="d-block w-100" alt="Episode IV Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode IV: A New Hope (1977)</h2>
@@ -46,9 +47,9 @@
             </div>
         </div>
     </section>
-    <section class = "movies2">
+    <section class = "movies2 offset-xl-1 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
 
-        <div class="secondmovie" style="width: 25rem;">
+        <div class="secondmovie";>
             <img src="ImageSW/Empire_strikes_back.jpg" class="d-block w-100" alt="Episode V Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode V: The Empire Strikes Back (1980)</h2>
@@ -65,8 +66,8 @@
             </div>
         </div>
     </section>
-    <section class = "movies">
-        <div class="firstandthirdmovie" style="width: 25rem;">
+    <section class = "movies3 offset-xl-1 col-xl-3 offset-lg-4 col-lg-4 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+        <div class="firstandthirdmovie";>
 
             <img id="poster3" src="ImageSW/ReturnOfTheJedi.jpg" class="d-block w-100" alt="Episode VI Poster">
             <div class="card-body">
@@ -117,7 +118,7 @@
         crossorigin="anonymous"></script>
 
 
-
+</div>
 </body>
 
 </html>
