--- a/ThirdTrilogyStarWars.html
+++ b/ThirdTrilogyStarWars.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+        <div class="container-fluid">
     <header>
         <h1>Third Trilogy</h1>
     </header>
-    <div class="menu">
+    <div class="menu col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
             <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
@@ -23,10 +24,10 @@
             <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
         </nav>
     </div>
-    <section class="superclass">
-        <section class = "movies">
-        <div class="firstandthirdmovie" style="width: 25rem;">
-            <img src="ImageSW/thif1.jpeg" class="d-block w-100" alt="Episode IV Poster">
+    <section class="superclass d-flex row">
+            <section class = "movies1 offset-xl-0 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+        <div class="firstandthirdmovie">
+            <img src="ImageSW/thif1.jpeg" class="d-block w-100" alt="Episode VII Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VI: The Force Awakens (2015)</h2>
                 <p style="text-align: justify" class="card-text">The first part of the trilogy, Star Wars, episode VII:
@@ -46,9 +47,9 @@
             </div>
         </div>
     </section>
-    <section class = "movies2">
-        <div class="secondmovie" style="width: 25rem;">
-            <img src="ImageSW/thif2.jpg" class="d-block w-100" alt="Episode V Poster">
+    <section class = "movies2 offset-xl-1 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+        <div class="secondmovie">
+            <img src="ImageSW/thif2.jpg" class="d-block w-100" alt="Episode VIII Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VIII: The Last Jedis (2017)</h2>
                 <p style="text-align: justify" class="card-text">On June 20, 2014, Rian Johnson was chosen to write and
@@ -77,10 +78,10 @@
             </div>
         </div>
         </section>
-        <section class = "movies">
-        <div class="firstandthirdmovie" style="width: 25rem;">
+        <section class = "movies3 offset-xl-1 col-xl-3 offset-lg-4 col-lg-4 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+        <div class="firstandthirdmovie">
 
-            <img id="poster3" src="ImageSW/thif3.jpeg" class="d-block w-100" alt="Episode VI Poster">
+            <img id="poster3" src="ImageSW/thif3.jpeg" class="d-block w-100" alt="Episode IX Poster">
             <div class="card-body">
                 <h2 class="card-title">Episode VIII (2019)</h2>
                 <p style="text-align: justify" class="card-text">On August 2015, Colin Trevorrow was announced as
@@ -106,3 +107,6 @@
                 alt="youtube"></a>
         <p><span>A Star Wars Blog by Nathalie, Fabien & Enzo</span></p>
     </footer>
+        </div>
+</body>
+</html>
