--- a/EventPage.html
+++ b/EventPage.html
@@ -11,37 +11,38 @@
 </head>
 
 <body>
+        <div class="container-fluid">
     <header>
         <h1>Events</h1>
     </header>
-    <div class="menu">
-        <nav class="nav flex-column flex-sm-column">
-            <a class="badge badge-pill badge-danger" href="index.html">Home</a>
-            <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
-            <a class="badge badge-pill badge-warning" href="SecondTrilogyStarWars.html">Second Trilogy</a>
-            <a class="badge badge-pill badge-warning" href="ThirdTrilogyStarWars.html">Third Trilogy</a>
-            <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
-        </nav>
-    </div>
-        <section class = "carouselevents">
-            <section class="carouselindiv">
+        <section class = "carouselevents d-flex row">
+                <div class="col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
+                        <nav class="nav flex-column flex-sm-column position-fixed">
+                            <a class="badge badge-pill badge-danger mb-3" href="index.html">Home</a>
+                            <a class="badge badge-pill badge-warning mb-3" href="FirstTrilogyStarWars.html">First Trilogy</a>
+                            <a class="badge badge-pill badge-warning mb-3" href="SecondTrilogyStarWars.html">Second Trilogy</a>
+                            <a class="badge badge-pill badge-warning mb-3" href="ThirdTrilogyStarWars.html">Third Trilogy</a>
+                            <a class="badge badge-pill badge-danger mb-3" href="EventPage.html">Events</a>
+                        </nav>
+                    </div>
+            <section class="carouselindiv offset-xl-1 col-xl-8 offset-lg-2 col-lg-10 offset-md-4 col-md-10 offset-sm-4 col-sm-10 offset-5 col-6 mb-3">
             <div class="bd-example">
-                    <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Convention</a></h3>
+                    <h3><a href="https://www.starwarscelebration.com/" target="_blank">Convention</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="ImageSW/P3Carouselimg12.jpg" class="d-block w-100" alt="Star Wars">
+                            <img src="ImageSW/P3Carouselimg12.jpg" class="d-block w-100" alt="Convention">
                             <div class="carousel-caption d-none d-md-block">
 
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/P3Carouselimg55.gif" class="d-block w-100" alt="...">
+                            <img src="ImageSW/P3Carouselimg55.gif" class="d-block w-100" alt="Convention">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/P3Carouselimg00.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/P3Carouselimg00.jpg" class="d-block w-100" alt="Convention">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
@@ -49,24 +50,24 @@
                 </div>
             </div>
         </section>
-        <section class="carouselindiv">
+        <section class="carouselindiv offset-xl-3 col-xl-8 offset-lg-2 col-lg-10 offset-md-4 col-md-10 offset-sm-4 col-sm-10 offset-5 col-6 mb-3">
             <div class="bd-example">
                     <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Disney</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="ImageSW/disney1.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/disney1.jpg" class="d-block w-100" alt="Disney">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/disney2.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/disney2.jpg" class="d-block w-100" alt="Disney">
                             <div class="carousel-caption d-none d-md-block">
                                 <h1></h1>
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/disney3.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/disney3.jpg" class="d-block w-100" alt="Disney">
                             <div class="carousel-caption d-none d-md-block">
                                
                             </div>
@@ -75,24 +76,24 @@
                 </div>
             </div>
         </section>
-            <section class="carouselindiv">
+        <section class="carouselindiv offset-xl-3 col-xl-8 offset-lg-2 col-lg-10 offset-md-4 col-md-10 offset-sm-4 col-sm-10 offset-5 col-6 mb-3">
             <div class="bd-example">
-                    <h3><a href="https://www.shopdisney.fr/star-wars" target="_blank">Next Movies</a></h3>
+                    <h3><a href="http://www.allocine.fr/film/fichefilm_gen_cfilm=215094.html" target="_blank">Next Movies</a></h3>
                 <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
                     <div class="carousel-inner">
                         <div class="carousel-item active">
-                            <img src="ImageSW/film1.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/film1.jpg" class="d-block w-100" alt="Next Movie">
                             <div class="carousel-caption d-none d-md-block">
                                
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/film2.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/film2.jpg" class="d-block w-100" alt="Next Movie">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
                         <div class="carousel-item">
-                            <img src="ImageSW/film3.jpg" class="d-block w-100" alt="...">
+                            <img src="ImageSW/film3.jpg" class="d-block w-100" alt="Next Movie">
                             <div class="carousel-caption d-none d-md-block">
                             </div>
                         </div>
@@ -129,7 +130,7 @@
             integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
             crossorigin="anonymous"></script>
 
-
+        </div>
 
 </body>
 
