--- a/SecondTrilogyStarWars.html
+++ b/SecondTrilogyStarWars.html
@@ -11,10 +11,11 @@
 </head>
 
 <body>
+        <div class="container-fluid">
     <header>
         <h1>Second Trilogy</h1>
     </header>
-    <div class="menu">
+    <div class="menu col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
             <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
@@ -23,9 +24,9 @@
             <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
         </nav>
     </div>
-    <section class="superclass">
-            <section class = "movies">
-            <div class="firstandthirdmovie" style="width: 25rem;" >
+    <section class="superclass d-flex row">
+            <section class = "movies1 offset-xl-0 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+            <div class="firstandthirdmovie"  >
                 <img src="ImageSW/secf1.jpg" class="d-block w-100" alt="Episode I Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode I: The Phantom Menace (1999)</h2>
@@ -33,10 +34,10 @@
                 </div>
             </div>
         </section>
-        <section class = "movies2">
+        <section class = "movies2 offset-xl-1 col-xl-3 offset-lg-1 col-lg-5 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
     
-            <div class="secondmovie" style="width: 25rem;">
-                <img src="ImageSW/secf2.jpg" class="d-block w-100" alt="Episode V Poster">
+            <div class="secondmovie">
+                <img src="ImageSW/secf2.jpg" class="d-block w-100" alt="Episode II Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode II: Attack of the clones (2002)</h2>
                     <p style="text-align: justify" class="card-text">
@@ -45,10 +46,10 @@
                 </div>
             </div>
         </section>
-        <section class = "movies">
-            <div class="firstandthirdmovie" style="width: 25rem;">
+        <section class = "movies3 offset-xl-1 col-xl-3 offset-lg-4 col-lg-4 offset-md-4 col-md-5 offset-sm-2 col-sm-6 offset-5 col-6 mb-3">
+            <div class="firstandthirdmovie">
     
-                <img id="poster3" src="ImageSW/secf3.jpg" class="d-block w-100" alt="Episode VI Poster">
+                <img id="poster3" src="ImageSW/secf3.jpg" class="d-block w-100" alt="Episode III Poster">
                 <div class="card-body">
                     <h2 class="card-title">Episode III: Revenge of the sith (2005)</h2>
                     <p style="text-align: justify" class="card-text">Episode III begins when the Jedi Skywalker and Kenobi save the chancellor captured by the separatists during the war. Gradually, the influence of the latter becomes stronger and stronger. At the same time, the Jedi increasingly suspect the presence of a Sith Lord in the higher spheres of power. While knights are sent to battle across the galaxy with their battalions of clones, Anakin discovers that the Chancellor is the Sith Lord in question. However, the latter explains to him how to save Padmé from a certain death. Anakin then prevents the Jedi from killing the Sith by interposing in his duel against Mace Windu. Palpatine takes the opportunity to eliminate the Jedi Master and then orders 66: all Knights are eliminated by the clones. Some, however, escape the massacre, Yoda and Obi-Wan in the lead. The first party faces Palpatine, newly self-appointed Emperor and fails. At the same time, Obi-Wan confronts Anakin, who became Lord Vader and leaves him for dead, horribly burned. While Palpatine has Vader operated, now locked in an imposing black armor, Padme gives birth to two children, Luke and Leia, before dying. The first is entrusted to his uncle and aunt on Tatooine, while the second is raised by the Alderaan royal family.
@@ -68,3 +69,6 @@
                     alt="youtube"></a>
             <p><span>A Star Wars Blog by Nathalie, Fabien & Enzo</span></p>
         </footer>
+        </div>
+</body>
+</html>
