--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
 </head>
 
 <body>
+    <div class="container-fluid">
     <header>
         <div class="bd-example">
             <div id="carouselExampleCaptions" class="carousel slide" data-ride="carousel">
@@ -24,12 +25,12 @@
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img id="img2" src="ImageSW/best-star-wars-header.jpg" class="d-block w-100" alt="...">
+                        <img id="img2" src="ImageSW/best-star-wars-header.jpg" class="d-block w-100" alt="CarouselStarWars">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
                     <div class="carousel-item">
-                        <img id="img3" src="ImageSW/VaporatorsHeader-1.jpg" class="d-block w-100" alt="...">
+                        <img id="img3" src="ImageSW/VaporatorsHeader-1.jpg" class="d-block w-100" alt="CarouselStarWars">
                         <div class="carousel-caption d-none d-md-block">
                         </div>
                     </div>
@@ -37,9 +38,11 @@
             </div>
         </div>
     </header>
-    <audio autoplay controls src="AudioSW/Imperial.mp3">
-    </audio>
-    <div class="menu">
+    <!-- <audio autoplay controls src="AudioSW/Imperial.mp3">
+    </audio> -->
+    <section class="d-flex row">
+    <!--NAV-->
+    <div class="menu col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
         <nav class="nav flex-column flex-sm-column">
             <a class="badge badge-pill badge-danger" href="index.html">Home</a>
             <a class="badge badge-pill badge-warning" href="FirstTrilogyStarWars.html">First Trilogy</a>
@@ -48,8 +51,9 @@
             <a class="badge badge-pill badge-danger" href="EventPage.html">Events</a>
         </nav>
     </div>
-    <section class="container">
-        <div class="card1" style="width: 32rem;">
+    <!--NAV-->
+    <!--DV-->
+        <div class="card1 offset-xl-3 col-xl-4 offset-lg-4 col-lg-5 offset-md-4 col-md-5 offset-sm-4 col-sm-6 offset-5 col-6 mb-3 p-0">
 
             <img id="BigCard" src="ImageSW/VaderGoodP1.jpg" class="d-block w-100" alt="Darth Vader">
             <div class="card-body">
@@ -57,8 +61,10 @@
                 <p class="card-text"> <a href="./EventPage.html" target="_blank">Discover all the Star Wars events incoming</a></p>
             </div>
         </div>
-        <div class="littlecards">
-            <div class="card" data-target="#jesp" data-toggle="modal" style="width: 22rem" ;>
+    <!--DV-->
+        <!--SMALL CARD-->
+        <div class="littlecards offset-xl-1 col-xl-3 offset-lg-4 col-lg-5 offset-md-4 col-md-5 offset-sm-4 col-sm-5 offset-5 col-6 mt-4 p-0">
+            <div class="card mb-3" data-target="#jesp" data-toggle="modal">
                 <img class="card-img-top" src="ImageSW/yodacardp1.jpeg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">We are the Nice guys</h5>
@@ -98,8 +104,7 @@
                     </div>
                 </div>
             </div>
-
-            <div class="card" data-target="#jesp2" data-toggle="modal" style="width: 22rem" ;>
+            <div class="card mb-3" data-target="#jesp2" data-toggle="modal">
                 <img class="card-img-top" src="ImageSW/Sidiousp1.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">We are the Bad guys !!!</h5>
@@ -122,7 +127,7 @@
                     </div>
                 </div>
             </div>
-            <div class="card" data-target="#fi" data-toggle="modal" style="width: 22rem" ;>
+            <div class="card mb-3" data-target="#fi" data-toggle="modal">
                 <img id="mugs" class="card-img-top" src="ImageSW/mug-cardp1.jpg.jpg" alt="Card image cap">
                 <div class="card-body">
                     <h5 class="card-title">Official shop</h5>
@@ -130,7 +135,7 @@
                 </div>
             </div>
            
-
+<!--SMALL CARD-->
         </div>
     </section>
 
@@ -163,6 +168,6 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
+</div>
 </body>
-
 </html>
