--- a/index.html
+++ b/index.html
@@ -38,8 +38,8 @@
             </div>
         </div>
     </header>
-    <!-- <audio autoplay controls src="AudioSW/Imperial.mp3">
-    </audio> -->
+    <audio autoplay controls src="AudioSW/Imperial.mp3">
+    </audio>
     <section class="d-flex row">
     <!--NAV-->
     <div class="menu col-xl-2 col-lg-2 col-md-2 col-sm-2 col-2">
